--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dashboard",
   "private": true,
   "version": "0.0.0",
-  "homepage": "./",
+  "homepage": "https://yaraboualsood.github.io/customers-transactions"
+",
   "type": "module",
   "scripts": {
     "dev": "vite",
